[tool.poetry]
name = "counter-experiments"
version = "0.1.0"
description = ""
authors = ["Shaun Verch"]

[tool.poetry.dependencies]
python = "^3.8"
slack-sdk = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
